--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@
 
 body {
     font-family: 'Comic Neue', sans-serif;
-    background-color: #f0f4c3;
+    background-color: #393e46;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -19,7 +19,7 @@ body {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    background-color: #565e56;
+    background-color: #222831;
     padding: 20px;
     width: 100%;
     color: #fff;
@@ -40,8 +40,8 @@ button {
     padding: 10px 20px;
     border: none;
     border-radius: 5px;
-    background-color: #43a047;
-    color: white;
+    background-color: #fcfffc;
+    color: #0f620f;
     cursor: pointer;
     font-size: 16px;
 }
@@ -72,7 +72,9 @@ button:hover {
     justify-content: center;
     margin-top: 0px;
     overflow: hidden; /* Prevents keys from moving outside the container */
+    background-color: #ffffff; /* Sets background color to white */
 }
+
 
 textarea {
     width: 100%;
@@ -81,14 +83,15 @@ textarea {
     border: 1px solid #ccc;
     border-radius: 5px;
     font-size: 16px;
+    color: #020100;
     line-height: 1.6;
     resize: none;
-    background-color: #fff;
+    background-color: #c6c3c3;
 }
 
 .keyboard {
     width: 40%;
-    background-color: #39a7d3;
+    background-color: #fd7014;
     padding: 20px;
     border-radius: 8px;
     box-shadow: 0 2px 10px rgba(0, 0, 0, 0.2);
@@ -98,7 +101,7 @@ textarea {
     text-align: center;
     font-size: 24px;
     margin-bottom: 10px;
-    color: #333;
+    color: #e9e2e2;
 }
 
 .key-row {
@@ -111,7 +114,8 @@ textarea {
     width: 40px;
     height: 40px;
     font-size: 20px;
-    background-color: #ffeb3b;
+    color: #000000;
+    background-color: #f4f4f3;
     border: 2px solid #333;
     border-radius: 8px;
     cursor: pointer;
