--- a/style.css
+++ b/style.css
@@ -97,6 +97,50 @@ textarea {
     box-shadow: 0 2px 10px rgba(0, 0, 0, 0.2);
 }
 
+.generated-text-container {
+    display: flex;
+    align-items: center;
+    margin-top: 20px;
+    background-color: #f0f0f0;
+    padding: 15px;
+    border-radius: 8px;
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
+    width: 90%;
+}
+
+.timer {
+    font-size: 18px;
+    font-weight: bold;
+    margin-right: 15px;
+    color: #333;
+    background-color: #fff;
+    padding: 10px;
+    border-radius: 5px;
+    box-shadow: 0 1px 3px rgba(0, 0, 0, 0.2);
+}
+
+.generated-text {
+    font-size: 16px;
+    color: #555;
+}
+.backspace-button {
+    width: 100px;
+    height: 40px;
+    margin: 10px auto;
+    font-size: 16px;
+    background-color: #ff5722;
+    color: white;
+    border: none;
+    border-radius: 8px;
+    cursor: pointer;
+    transition: background-color 0.3s;
+}
+
+.backspace-button:hover {
+    background-color: #e64a19;
+}
+
+
 .keyboard-header {
     text-align: center;
     font-size: 24px;
@@ -121,6 +165,18 @@ textarea {
     cursor: pointer;
     transition: transform 0.2s ease, left 0.5s, top 0.5s;
     box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.5);
+}
+.result-container {
+    margin-top: 20px;
+    padding: 10px;
+    background-color: #dff0d8;
+    border-radius: 8px;
+}
+
+#resultMessage {
+    margin: 0;
+    font-size: 20px;
+    color: #3c763d;
 }
 
 .key:hover {
